Implemented functionality of getting the honey categories from database and displaying them on screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 50px;
+    flex-wrap: wrap;
 }
 
 .category-names>h2 {
